<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fotog</string>
    <string name="action_settings">Settings</string>
    <string name="header_text">Fotog!</string>
    <string name="exit">Exit</string>
    <string name="selectVideo">Select Video</string>
	<string name="recordVideo">Record Video</string>
	<string name="noeffect">No Effect</string>
	<string name="autofix">Auto Fix</string>
	<string name="bw">Black/White</string>
	<string name="brightness">Adjust Brightness</string>
	<string name="contrast">Adjust Contrast</string>
	<string name="crossprocess">Crossprocess</string>
	<string name="documentary">Documentary</string>
	<string name="duotone">Duotone</string>
	<string name="filllight">Fill Light</string>
	<string name="fisheye">Fisheye Lens</string>
	<string name="flipvert">Flip to Verticle</string>
	<string name="fliphor">Flip to Horizontal</string>
	<string name="grain">Film Grain</string>
	<string name="grayscale">Grayscale</string>
	<string name="lomoish">Lomo-Camera</string>
	<string name="negative">Invert Image</string>
	<string name="posterize">Posterize</string>
	<string name="rotate">Rotate Image</string>
	<string name="saturate">Adjust Saturation</string>
	<string name="sepia">Sepia</string>
	<string name="sharpen">Sharpen Image</string>
	<string name="temperature">Adjust Color Temperature</string>
	<string name="tint">Tint</string>
	<string name="vignette">Vignette</string>
	<string name="takePicture">Take a Picture</string>
	<string name="selectPicture">Select a Picture</string>
	<string name="unable_to_open_image">Unable to Open Image</string>
	<string name="savepicture">Save</string>
	<string name="saveandshare">Save and Share</string>
	<string name="facebook_app_id">759225814087735</string>
</resources>
