<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartScreen" >

    <TextView
        android:id="@+id/headertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_text" />

    <Button
        android:id="@+id/selectVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/exit"
        android:layout_below="@+id/headertext"
        android:layout_marginTop="59dp"
        android:text="@string/selectVideo" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/headertext"
        android:layout_below="@+id/selectVideo"
        android:text="@string/exit" />

    <Button
        android:id="@+id/recordVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/selectVideo"
        android:layout_below="@+id/headertext"
        android:layout_marginTop="14dp"
        android:text="@string/recordVideo" />


</RelativeLayout>